...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCalendarEvent">

    <EditText
        android:id="@+id/eventNameBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:text="@string/eventdescription_prompt"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventDescriptionBox"
        app:layout_constraintEnd_toStartOf="@+id/eventDescriptionBox"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#7986CB"
...
