<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/go_to_view"
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:contentDescription=""
        android:onClick="editEvent"
        android:text=""
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintRight_toLeftOf="@+id/deleteEvent"
        app:layout_constraintLeft_toRightOf="parent" />

    <Button
        android:id="@+id/delete_event"
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:contentDescription=""
        android:onClick="deleteEvent"
        android:text="Delete"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintLeft_toRightOf="@+id/go_to_view"
        app:layout_constraintRight_toLeftOf="parent" />
</LinearLayout>